# keedavault-core

./: .gitignore  Cargo.toml  README.md  README_CN.md
docs/: INDEX.md  MIGRATION.md  README.md  api-reference.md  ios-integration.md
docs/audit/: audit-report-v0.3.0.md
docs/development/: implementation-plan.md  uniffi-implementation.md
docs/fixes/: migration-summary.md  optimization-implementation.md  security-improvements.md  uniffi-implementation.md
docs/guides/: desktop-integration.md  ios-integration.md  project-structure.md
docs/history/: crud-implementation-summary.md
docs/updates/: phase-1-summary.md  progress-report.md  roadmap.md  step-0.1-summary.md
examples/ios-demo/: README.md
examples/ios-demo/Bindings/: keedavault_core.swift  keedavault_coreFFI.h  keedavault_coreFFI.modulemap
examples/ios-demo/Sources/: ContentView.swift  KeedaVaultDemoApp.swift  KeedavaultDemo-Bridging-Header.h  VaultViewModel.swift
src/: crypto.rs  entry.rs  error.rs  group.rs  lib.rs  search.rs  totp.rs  uniffi_bindings.rs  vault.rs
